# ces_test

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  spells.json
assets/characters/monsters/wolf/: wolf.json
assets/characters/monsters/wolf_den/: wolf_den.json
assets/characters/npc/hephasto/: hephasto.json
assets/characters/playable/: player.json
assets/data/: ice_lance.json  spells.json  zap.json
assets/effects/ignite/: ignite.json
assets/effects/ignite/animations/: idle.json
assets/scenes/: level_1.json
assets/spells/: fireball.json  haste.json  ice_lance.json  zap.json
assets/spells/fireball/: fireball.json
assets/spells/fireball/animations/: death.json  idle.json
assets/spells/fireball/particles/: ember.json  ember_emitter.json  smoke.json  smoke_emitter.json
assets/spells/haste/: haste.json
assets/spells/ice_lance/: ice_lance.json
assets/spells/spawn_wolf/: spawn_wolf.json
assets/spells/zap/: zap.json
src/: animation_loader.cpp  animation_loader.hpp  asset_manager.cpp  asset_manager.hpp  component.hpp  core.cpp  core.hpp  entity.cpp  entity.hpp  entity_creator.cpp  entity_creator.hpp  entity_data.hpp  entity_manager.cpp  entity_manager.hpp  entity_structure_modifier.cpp  entity_structure_modifier.hpp  event.h  file_io.cpp  file_io.hpp  i_asset.hpp  i_asset_loader.hpp  json_parser.cpp  json_parser.hpp  log.cpp  log.hpp  main.cpp  math.cpp  math.hpp  random_number_generator.cpp  random_number_generator.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene_loader.cpp  scene_loader.hpp  scoped.hpp  signal.h  spell.hpp  spell_loader.cpp  (+14 more)
src/components/: ability.hpp  ai.cpp  ai.hpp  animation.cpp  animation.hpp  attack.hpp  cast_spell.hpp  collision.cpp  collision.hpp  components.hpp  damage.cpp  damage.hpp  geometry.cpp  geometry.hpp  life.cpp  life.hpp  life_mana.hpp  mana.cpp  mana.hpp  owner.cpp  owner.hpp  particle_system.cpp  particle_system.hpp  player_control.cpp  player_control.hpp  reward.cpp  reward.hpp  spawn.cpp  spawn.hpp  spell.cpp  spell.hpp  spell_book.cpp  spell_book.hpp  status_effect.cpp  status_effect.hpp  tag.cpp  tag.hpp  texture.cpp  texture.hpp  use_ability.hpp  (+6 more)
src/global/: effect_types.hpp
src/loaders/: animation_loader.cpp  animation_loader.hpp  emitter_loader.cpp  emitter_loader.hpp  entity_loader.cpp  entity_loader.hpp  i_asset_loader.hpp  json_parser.cpp  json_parser.hpp  particle_loader.cpp  particle_loader.hpp  scene_loader.cpp  scene_loader.hpp  spell_loader.cpp  spell_loader.hpp  status_effect_loader.cpp  status_effect_loader.hpp  texture_loader.cpp  texture_loader.hpp
